<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:layout_marginTop="64dp"
        android:paddingBottom="64dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvHeightLabel"
        android:text="@string/height2"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/label_style" />

    <TextView
        android:id="@+id/tvHeight"
        app:layout_constraintBottom_toBottomOf="@id/tvHeightLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvHeightLabel"
        style="@style/content_style" />

    <TextView
        android:id="@+id/tvNationLabel"
        android:text="@string/nationality"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeightLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/label_style"/>

    <TextView
        android:id="@+id/tvNationality"
        app:layout_constraintBottom_toBottomOf="@id/tvNationLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvNationLabel"
        style="@style/content_style"/>

    <TextView
        android:id="@+id/tvBornLabel"
        android:text="@string/born"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvNationLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/label_style"/>

    <TextView
        android:id="@+id/tvBorn"
        app:layout_constraintBottom_toBottomOf="@id/tvBornLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvBornLabel"
        style="@style/content_style"/>

    <ToggleButton
        android:id="@+id/togFavorite"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/favorite_selector"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>