<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddCelebrityActivity"
    tools:showIn="@layout/activity_add_celebrity">

    <TextView
        android:id="@+id/tvAddCelebHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add a Celebrity to the List"
        android:textSize="32sp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingTop="24dp"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@id/tvAddCelebHeader"/>

    <EditText
        android:id="@+id/etNationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:hint="@string/nationality_hint"
        app:layout_constraintTop_toBottomOf="@id/etName"/>

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="24sp"
        android:paddingTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etNationality"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spinnerFeet"
        app:layout_constraintBottom_toBottomOf="@id/spinnerFeet"/>

    <Spinner
        android:id="@+id/spinnerFeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etNationality"
        app:layout_constraintLeft_toRightOf="@id/tvHeight"
        app:layout_constraintRight_toLeftOf="@id/spinnerInches"/>

    <Spinner
        android:id="@+id/spinnerInches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etNationality"
        app:layout_constraintLeft_toRightOf="@id/spinnerFeet"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvBorn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date of Birth"
        android:textSize="24sp"
        android:textAlignment="center"
        android:paddingTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvHeight"/>

    <DatePicker
        android:id="@+id/pickBorn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintTop_toBottomOf="@id/tvBorn"/>

</androidx.constraintlayout.widget.ConstraintLayout>